--- a/style.css
+++ b/style.css
@@ -109,23 +109,28 @@
 .skew-cards {
     display: flex;
     justify-content: space-between;
+    gap: 24px;
+    margin-bottom: 60px;
 }
 
 .skew-card {
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .skew-card p {
-    color: #fff;
-    text-align: left;
-    margin: 0;
-    height: 60px;
-    padding: 20px;
+    color: #fff !important;
+    margin: 0 !important;
+    height: 80px;
+    padding: 0px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 18px;
     font-weight: 500;
-    line-height: 1.2em;
+    line-height: 1.2em !important;
     position: relative;
     z-index: 100;
 }
@@ -133,7 +138,7 @@
 .skew-card::after {
     content: '';
     background-color: #CD381C;
-    height: 60px;
+    height: 80px;
     transform: skew(336deg, 360deg);
     position: absolute;
     top: 0;
@@ -146,7 +151,7 @@
     background-color: #41B0F6;
     width: 15px;
     left: 50px;
-    height: 60px;
+    height: 80px;
     transform: skew(336deg, 360deg);
     z-index: 2;
 }
@@ -156,7 +161,7 @@
     background-color: #062769;
     left: 65px;
     right: 0;
-    height: 60px;
+    height: 80px;
     transform: skew(336deg, 360deg);
     z-index: 2;
 }
