--- a/style.css
+++ b/style.css
@@ -32,12 +32,11 @@
     position: relative;
     background-color: darkblue;
     padding: 200px 0 120px 0;
-    background-image: url('./assets/pexels-rostislav-uzunov-5011647.jpg');
+    /* background-image: url('./assets/pexels-djordje-petrovic-2102416.jpg'); */
     background-repeat: no-repeat;
     background-position-x: 25%;
     background-position-y: center;
 }
-
 
 .hero-info h2 {
     color: var(--bs-primary-color);
@@ -332,6 +331,8 @@ footer {
 
 .footer-top {
     padding: 60px 0 30px 0;
+    max-width: 90%;
+    margin: 0 auto;
 }
 
 .footer-info {
@@ -341,16 +342,15 @@ footer {
 .logo img {
     padding: 0;
     max-height: 60px;
-    mix-blend-mode: multiply;
+    mix-blend-mode: darken;
 }
 
-.footer-info p {
+.footer-top p {
     color: #333;
     margin-bottom: 25px;
     font-size: var(--font-size-xsm);
     font-weight: 300;
     line-height: 24px;
-    margin-bottom: 0;
 }
 
 .footer-top h4 {
@@ -361,9 +361,17 @@ footer {
     line-height: 1.1em;
 }
 
+.footer-links ul {
+    border-top: 6px solid var(--bs-dark-cerulean);
+}
+
 .footer-links ul li {
     padding: 8px 0;
     margin-bottom: 24px;
+}
+
+.second-menu ul {
+    border-color: var(--bright-blue);
 }
 
 .footer-links ul a {
@@ -384,6 +392,12 @@ footer {
 .footer-contact {
     margin-bottom: 30px;
     color: var(--bs-primary-color);
+}
+
+.location {
+    padding: 8px 0 0;
+    margin: 0 15px;
+    border-top: 6px solid var(--bs-primary-color);
 }
 
 .social-links a {
@@ -786,7 +800,8 @@ textarea {
         background-position: center;
     }
 
-    .button-wrapper a {
+    .button-wrapper a,
+    .button-wrapper span {
         flex: 1;
     }
 
@@ -882,5 +897,11 @@ textarea {
 
     .navbar .icon {
         display: none;
+    }
+}
+
+@media (min-width:800px) {
+    .footer-links ul {
+        max-height: 201px;
     }
 }
